--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
      "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<title>Test page</title>
+<title>Index</title>
 </head>
 <body>
-<h2> It works ! </h2>
+Nothing to see here. Go to the <a href="https://github.com/flakeshake/debian-umgmt-packaging">project website</a> on github.com instead.
 </body>
 </html>
